# mailod

./: Makefile  ProjectHome.md  autogen.sh  common_function.c  configure.ac  const.h  database_function.c  email.c  email.h  hash_function.c  logging.c  logging.h  mailod.c  setting  test_mail
bakalarka/source/html_dokumenty/: maximum_number_of_acls_on_directory_on_ext3.htm  mxsurvey_2006.htm  using_acl_with_fedora_core_2.htm
doc/: bakalarka_garaj.odt
etc/postfix/: mailod.conf  main.cf
src/: Makefile  common_function.c  common_function.h  const.h  database_function.c  database_function.h  email.c  email.h  hash_function.c  hash_function.h  logging.c  mailod.c  setting  setting_true  shell_setting  sql_database.sql  test_mail
test/: chowni_maildiry  postal  send_test_mails.sh  test_text  users_list  vycisti_cur_new_foldre_posttest.sh
tests/: README  add_posttest_users.sh  chowni_maildiry
todo/: function  maillogfrompostfix  maillogfrompostfix001
trunk/: INSTALL  Makefile  Makefile.garaj  README  autogen.sh  common_function.c  common_function.h  configure.ac  const.h  database_function.c  email.c  email.h  hash_function.c  hash_function.h  mailod.c  setting
trunk/bakalarka/source/: lmp-parameters.txt
trunk/bakalarka/source/html_dokumenty/: mx_survey_2004.htm
trunk/doc/: bakalarka_garaj.odt
trunk/doc/literatura/: mail-parameters.txt  usefull_links.html
trunk/doc/literatura/html_dokumenty/: kolize_hash.html  mx_survey_2004.htm  postfix.html
trunk/etc/init.d/: mailod
trunk/etc/postfix/: master.cf
trunk/src/: Makefile  common_function.c  common_function.h  const.h  daemon.c  database_function.c  database_function.h  email.c  email.h  hash_function.c  hash_function.h  logging.c  logging.h  mailod.c  setting_true
trunk/test/: chowni_maildiry  postal
trunk/tests/: reload  send_test_mails.sh  users_list
trunk/todo/: function
(+5 files in other folders)
